Updated folder structures
Completed file path links to the new folder strucutre for CSS and images

--- a/styles/cervoniCritters.css
+++ b/styles/cervoniCritters.css
@@ -1,6 +1,6 @@
 
 .jumbotronHeaderImg {
-    background-image: url(images/sammyHeader.jpg);
+    background-image: url(../images/sammyHeader.jpg);
     background-size: cover;
     background-position: center;
     color: white;
