Finalized remaining critter directions

--- a/styles/core.css
+++ b/styles/core.css
@@ -96,6 +96,10 @@ body {
     background: #41506B;
 }
 
+.warning {
+    color: red;
+}
+
 /*CONTACT PAGE*/
 .contactCard {
     margin-bottom: 15px;
